--- a/Netflix_Movies_and_TV_Shows.ipynb
+++ b/Netflix_Movies_and_TV_Shows.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPngJoEEEEuNSUxCKw+m687",
+      "authorship_tag": "ABX9TyOGnkHA0BLEA0JeCXNDNfYW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,8 @@
       "cell_type": "markdown",
       "source": [
         "# Netflix Movies and TV Shows\n",
-        "Exploring Netflix Movies and TV Shows kaggle dataset."
+        "Exploring Netflix Movies and TV Shows kaggle dataset.\n",
+        "https://www.kaggle.com/datasets/rahulvyasm/netflix-movies-and-tv-shows"
       ],
       "metadata": {
         "id": "vmRikIDm9-pa"
